# bigData

./: .gitignore  CLAUDE.md  FEATURES.md  README.md  start.sh
big-data-frontend/: index.html  package-lock.json  package.json  vite.config.ts
big-data-frontend/src/: App.vue  main.ts
big-data-frontend/src/api/: llm.ts
big-data-frontend/src/assets/: design-tokens.css  element-overrides.css
big-data-frontend/src/components/chat/: MarkdownRenderer.vue
big-data-frontend/src/components/common/: ComingSoon.vue  PrimaryButton.vue  SecondaryButton.vue  (+1 more)
big-data-frontend/src/layouts/: AppLayout.vue
big-data-frontend/src/router/: index.ts
big-data-frontend/src/stores/: conversations.ts  documents.ts
big-data-frontend/src/views/: ChatLayout.vue  ChatView.vue  DashboardView.vue  DocumentDetailView.vue  DocumentListView.vue  KbSearchView.vue  SettingsView.vue  UserManagementView.vue
document-parser-backend/: .env.docker  .env.example  .gitignore  docker-compose.yml  pyproject.toml  test.db
document-parser-backend/src/app/: main.py
document-parser-backend/src/core/: celery.py  database.py  logging.py  minio.py  models.py
document-parser-backend/src/parsers/: base.py  docx_parser.py  eml_parser.py  excel_parser.py  models.py  msg_parser.py  ocr_parser.py  pdf_parser.py  registry.py  text_parser.py
document-parser-backend/src/tasks/: parser_task.py
document-parser-backend/tests/: test_api.py  test_docx_parser.py  test_excel_parser.py  test_logging.py  test_parser_registry.py  test_pdf_parser.py
document-parser-backend/tests/assets/: 分类.xlsx  大班语言教案_绕口令蛙和瓜.docx  江夏区年度科技“小巨人”企业名单_2026-04-01.csv  江夏区年度科技“小巨人”企业名单_2026-04-01.xlsx  镜像导入.txt
llm-service/: .env.example  Dockerfile  pyproject.toml
llm-service/src/agents/: agent_graph.py  tools.py
llm-service/src/app/: database.py  main.py  models.py  routes.py  settings.py
llm-service/src/clients/: __init__.py  dashscope.py  document_client.py  factory.py  openrouter.py
llm-service/src/graph/: chat_graph.py
llm-service/tests/: test_chat.py  test_dashscope.py  test_factory.py  test_graph.py  test_settings.py
